--- a/css/form.css
+++ b/css/form.css
@@ -46,3 +46,12 @@ body {
   letter-spacing: 3px;
   font-weight: bold;
 }
+
+.error {
+  color: #ff0000;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  margin-top: -5px;
+  margin-bottom: 10px;
+  display: none;
+}
